--- a/Client/package.json
+++ b/Client/package.json
@@ -12,10 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
+    "react-slick": "^0.30.3",
+    "sass": "^1.83.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
