--- a/Client/package.json
+++ b/Client/package.json
@@ -22,11 +22,13 @@
     "react-router": "^7.1.1",
     "react-slick": "^0.30.3",
     "sass": "^1.83.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@iconify/react": "^5.2.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
