--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@mui/x-data-grid": "^7.23.6",
+    "@mui/x-data-grid-premium": "^7.23.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.64.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
