--- a/Server/dockerFile
+++ b/Server/dockerFile
@@ -1,11 +1,7 @@
-FROM node:20 AS build
+FROM node:20
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
-COPY ..
-RUN npm run build
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY . .
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "start"]
